# rime-cli

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs
.github/workflows/: commit-ci.yml
src/: download.rs  get_rime.rs  install.rs  main.rs  package.rs  recipe.rs  rime_levers.rs
