[package]
name = "rime-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rime"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.96"
env_logger = "0.11.6"
rime = { package = "librime-sys", git = "https://github.com/lotem/librime-sys.git" }
log = "0.4.26"
structopt = "0.3.26"
claims = "0.8.0"
lazy_static = "1.5.0"
git2 = "0.20.0"
tempfile = "3.17.1"
indicatif = "0.17.11"
